# 8-puzzle

./: runprog.sh
program/: CMakeLists.txt
program/Main/: CMakeLists.txt  main.cpp
program/Main/include/: AStarHamming.hpp  AStarManhatan.hpp  AbstractAlgorithm.hpp  AbstractMove.hpp  Arguments.hpp  Basic.hpp  BfsSearch.hpp  DfsSearch.hpp  HammingComparator.hpp  Info.hpp  ManhatanComparator.hpp  MoveDown.hpp  MoveLeft.hpp  MoveRight.hpp  MoveUp.hpp  Solution.hpp  State.hpp  StateCantMoveException.hpp
program/Main/src/: .State.cpp.swp  AStarHamming.cpp  AStarManhatan.cpp  AbstractAlgorithm.cpp  AbstractMove.cpp  Arguments.cpp  Basic.cpp  BfsSearch.cpp  DfsSearch.cpp  Info.cpp  MoveDown.cpp  MoveLeft.cpp  MoveRight.cpp  MoveUp.cpp  Solution.cpp  State.cpp
program/test/: AStarHammingTest.cpp  AStarManhatanTest.cpp  ArgumentsTest.cpp  Basic.cpp  BfsSearchTest.cpp  DfsSearchTest.cpp  MoveDownTest.cpp  MoveLeftTest.cpp  MoveRightTest.cpp  MoveUpTest.cpp  SolutionTest.cpp  StateTest.cpp  master.cpp
program/test/solutions/: 3x3_01_00001_bfs_rdul_sol.txt  3x3_01_00001_bfs_rdul_stats.txt  3x3_07_00034_bfs_rdul_stats.txt  4x4_01_00001_bfs_rdul_stats.txt  4x4_02_00001_bfs_rdul_stats.txt  4x4_07_00044_astr_manh_sol.txt  4x4_07_00044_astr_manh_stats.txt  4x4_07_00044_bfs_rdul_stats.txt
